force-app/main/default/objects/Job_Application__c/fields/Id_Proof_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Id_Proof_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Id Proof Uploaded</label>
    <type>Checkbox</type>
</CustomField>