force-app/main/default/objects/Job_Application__c/fields/Initiate_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiate Feedback</label>
    <type>Checkbox</type>
</CustomField>