force-app/main/default/objects/Job_Application__c/fields/Legacy_Job_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Job_Application_Number__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Job Application Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>