force-app/main/default/objects/Job_Application__c/fields/Offer_Details_Sent_to_HR_System__c.field-meta.xml
<CustomField>
    <fullName>Offer_Details_Sent_to_HR_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Details Sent to HR System</label>
    <type>Checkbox</type>
</CustomField>