force-app/main/default/objects/Job_Application__c/fields/Offered_Salary__c.field-meta.xml
<CustomField>
    <fullName>Offered_Salary__c</fullName>
    <label>Offered Salary</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>