force-app/main/default/objects/Job_Application__c/fields/Resume_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Resume_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume Uploaded</label>
    <type>Checkbox</type>
</CustomField>