force-app/main/default/objects/Job_Application__c/validationRules/No_Job_application_for_closed_position.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Job_application_for_closed_position</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Position__r.Status__c ,&quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>You cannot apply for a position that is Closed</errorMessage>
</ValidationRule>