force-app/main/default/objects/Job_Application__c/validationRules/Rejection_Reason_is_required_if_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_is_required_if_rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Status__c ,&quot;Rejected&quot;),
   ISBLANK( Rejection_Reason__c)  
 )</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please provide a Rejection Reason when marking an application as Rejected</errorMessage>
</ValidationRule>